--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
 space_packet_parser = ">=4.0.2,<5"
+bitstring = '<=4.0.1'
 
 # Optional dependencies
 black = {version="^23.1.0", optional=true}
