--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ classifiers = [
 python = ">=3.9,<3.12"
 space_packet_parser = ">=4.0.2,<5"
 bitstring = '<=4.0.1'
+xarray = '>=2022.11.0'
 
 # Optional dependencies
 black = {version="^23.1.0", optional=true}
