--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,4 +35,7 @@ jobs:
         id: test
         run: |
           # Ignore the network marks from the remote test environment
-          poetry run pytest --color=yes
+          poetry run pytest --color=yes --cov --cov-report=xml
+
+      - name: Upload code coverage
+        uses: codecov/codecov-action@v3
