--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ black = {version="^23.1.0", optional=true}
 pre-commit = {version="^3.3.3,<4", optional=true}
 pydata-sphinx-theme = {version="*", optional=true}
 pytest = {version=">=6.2.5,<7", optional=true}
+pytest-cov = {version="^4.0.0", optional=true}
 ruff = {version="^0.0.253", optional=true}
 sphinx = {version="*", optional=true}
 myst-parser = {version="^2.0.0", optional=true}
@@ -43,7 +44,7 @@ myst-parser = {version="^2.0.0", optional=true}
 [tool.poetry.extras]
 dev = ["black", "pre-commit", "ruff"]
 doc = ["myst-parser", "pydata-sphinx-theme", "sphinx"]
-test = ["pytest"]
+test = ["pytest", "pytest-cov"]
 
 [project.urls]
 homepage = "https://github.com/IMAP-Science-Operations-Center"
