--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,8 +30,6 @@ classifiers = [
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
 space_packet_parser = ">=4.0.2,<5"
-pandas = ">=2.0.0,<3"
-openpyxl = ">=3.0.7,<4"
 
 # Optional dependencies
 black = {version="^23.1.0", optional=true}
@@ -41,11 +39,15 @@ pytest = {version=">=6.2.5,<7", optional=true}
 ruff = {version="^0.0.253", optional=true}
 sphinx = {version="*", optional=true}
 myst-parser = {version="^2.0.0", optional=true}
+bitstring = "4.0.2"
+pandas = ">=2.0.0,<3"
+openpyxl = ">=3.0.7,<4"
 
 [tool.poetry.extras]
 dev = ["black", "pre-commit", "ruff"]
 doc = ["myst-parser", "pydata-sphinx-theme", "sphinx"]
 test = ["pytest"]
+tools= ["pandas", "openpyxl"]
 
 [project.urls]
 homepage = "https://github.com/IMAP-Science-Operations-Center"
