--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,9 +40,8 @@ pytest-cov = {version="^4.0.0", optional=true}
 ruff = {version="^0.0.253", optional=true}
 sphinx = {version="*", optional=true}
 myst-parser = {version="^2.0.0", optional=true}
-bitstring = "4.0.2"
-pandas = ">=2.0.0,<3"
-openpyxl = ">=3.0.7,<4"
+pandas = {version=">=2.0.0,<3", optional=true}
+openpyxl = {version=">=3.0.7,<4", optional=true}
 
 [tool.poetry.extras]
 dev = ["black", "pre-commit", "ruff"]
