--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,11 +40,14 @@ pytest-cov = {version="^4.0.0", optional=true}
 ruff = {version="^0.0.253", optional=true}
 sphinx = {version="*", optional=true}
 myst-parser = {version="^2.0.0", optional=true}
+pandas = {version=">=2.0.0,<3", optional=true}
+openpyxl = {version=">=3.0.7,<4", optional=true}
 
 [tool.poetry.extras]
 dev = ["black", "pre-commit", "ruff"]
 doc = ["myst-parser", "pydata-sphinx-theme", "sphinx"]
 test = ["pytest", "pytest-cov"]
+tools= ["pandas", "openpyxl"]
 
 [project.urls]
 homepage = "https://github.com/IMAP-Science-Operations-Center"
