Responding to code review

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,9 +29,12 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
-space_packet_parser = ">=4.0.2,<5"
+lasp_packets = ">=0.0.0"
+spiceypy = '>=0.0.0'
+xarray = '>=0.0.0'
+cdflib = '>=1.0.0'
 bitstring = '<=4.0.1'
-xarray = '>=2022.11.0'
+space_packet_parser = '>=4.0.2'
 
 # Optional dependencies
 black = {version="^23.1.0", optional=true}
