--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,13 +7,14 @@ repos:
     rev: v4.4.0
     hooks:
     - id: check-added-large-files
+      args: ['--maxkb=1000']
     - id: detect-aws-credentials
       args: [--allow-missing-credentials]
     - id: detect-private-key
     - id: mixed-line-ending
     - id: trailing-whitespace
     - id: no-commit-to-branch
-      args: [--branch, main, --branch, dev]
+      args: [--branch, main]
   - repo: https://github.com/psf/black
     rev: 23.3.0
     hooks:
