--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
 numpy = '>=0.0.0'
+bitstring = '4.0.2'
 space_packet_parser = '>=4.0.2'
 
 # Optional dependencies
