--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,10 +29,9 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
-xarray = '>=2023.0.0'
-space_packet_parser = ">=4.1.0,<5"
+space_packet_parser = ">=4.0.2,<5"
 bitstring = ">=4.0.1,<5"
-netCDF4 = ">=1.6.2, <2"
+xarray = ">=2023.8.0, <2023.12.31"
 
 # Optional dependencies
 black = {version="^23.1.0", optional=true}
