--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,8 @@ classifiers = [
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
 space_packet_parser = ">=4.0.2,<5"
+bitstring = ">=4.0.1,<5"
+xarray = ">=2023.8.0, <2023.12.31"
 
 # Optional dependencies
 black = {version="^23.1.0", optional=true}
