--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,9 +29,10 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
-space_packet_parser = ">=4.0.2,<5"
+space_packet_parser = ">=4.1.0,<5"
 bitstring = ">=4.0.1,<5"
 xarray = ">=2023.8.0, <2023.12.31"
+netCDF4 = ">=1.6.2, <2"
 
 # Optional dependencies
 black = {version="^23.1.0", optional=true}
