--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,8 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
-space_packet_parser = ">=4.0.2,<5"
+xarray = '>=2023.0.0'
+space_packet_parser = '>=4.1.0'
 
 # Optional dependencies
 black = {version="^23.1.0", optional=true}
