--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
+xarray = '>=2023.0.0'
 space_packet_parser = ">=4.1.0,<5"
 bitstring = ">=4.0.1,<5"
 
