--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,7 @@
 		}
 	},
 	"forwardPorts": [6080],
-	"postCreateCommand": "poetry install && source $(poetry env info --path)/bin/activate",
+	"postCreateCommand": "bash -i 'poetry install && source $(poetry env info --path)/bin/activate'",
 	"customizations": {
 		"vscode": {
 			"extensions": [
