--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ myst-parser = {version="^2.0.0", optional=true}
 pandas = {version=">=2.0.0,<3", optional=true}
 openpyxl = {version=">=3.0.7,<4", optional=true}
 
+
 [tool.poetry.extras]
 dev = ["black", "pre-commit", "ruff"]
 doc = ["myst-parser", "pydata-sphinx-theme", "sphinx"]
@@ -66,4 +67,4 @@ target-version = "py39"
 select = ["B", "E", "F", "I", "N", "S", "W", "PL", "PT", "UP", "RUF"]
 # Ignore import sorting for now until lines_after_imports is respected
 # by ruff and we can replace isort
-ignore = ["D203", "D212", "PLR0913", "PLR2004", "S101"]
+ignore = ["D203", "D212", "PLR0913", "PLR2004", "S101", "PLR0915"]
