DOC: Add autosummary templates and update docstrings for code
This adds the ability to autosummarize the code modules we are using
for easier API documentation. We also follow numpydoc conventions, so
we now install that to get nicer formatting of the API docs.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,7 +24,9 @@ jobs:
 
     - name: Build documentation
       run: |
-        make -C docs html
+        # SPHINXOPTS="-W --keep-going -n" is used to turn warnings into errors
+        # but keep going, so we don't fail on the first one.
+        make -C docs html SPHINXOPTS="-W --keep-going -n"
 
     - uses: actions/upload-artifact@v2
       with:
