--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,7 @@ repos:
     - id: mixed-line-ending
     - id: trailing-whitespace
     - id: no-commit-to-branch
-      args: [--branch, main]
+      args: [--branch, main, --branch, dev]
   - repo: https://github.com/psf/black
     rev: 23.7.0
     hooks:
