--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,13 @@ addopts = "-ra"
 
 [tool.ruff]
 target-version = "py39"
-select = ["B", "E", "F", "I", "N", "S", "W", "PL", "PT", "UP", "RUF"]
-# Ignore import sorting for now until lines_after_imports is respected
-# by ruff and we can replace isort
-ignore = ["D203", "D212", "PLR0913", "PLR2004", "S101"]
+select = ["B", "D", "E", "F", "I", "N", "S", "W", "PL", "PT", "UP", "RUF"]
+
+ignore = ["D100", "D104", "PLR0913", "PLR2004", "S101"]
+
+[tool.ruff.per-file-ignores]
+"*/tests/*" = ["D"]
+"tools/xtce*" = ["D"]
+
+[tool.ruff.pydocstyle]
+convention = "numpy"
