--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ numpydoc = {version="^1.5.0", optional=true}
 pandas = {version=">=2.0.0,<3", optional=true}
 openpyxl = {version=">=3.0.7,<4", optional=true}
 
+
 [tool.poetry.extras]
 dev = ["black", "pre-commit", "ruff"]
 doc = ["myst-parser", "numpydoc", "pydata-sphinx-theme", "sphinx"]
@@ -66,8 +67,7 @@ addopts = "-ra"
 [tool.ruff]
 target-version = "py39"
 select = ["B", "D", "E", "F", "I", "N", "S", "W", "PL", "PT", "UP", "RUF"]
-
-ignore = ["D100", "D104", "PLR0913", "PLR2004", "S101"]
+ignore = ["D100", "D104", "PLR0913", "PLR2004", "S101", "PLR0915"]
 
 [tool.ruff.per-file-ignores]
 "*/tests/*" = ["D"]
