--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,11 +67,14 @@ addopts = "-ra"
 [tool.ruff]
 target-version = "py39"
 select = ["B", "D", "E", "F", "I", "N", "S", "W", "PL", "PT", "UP", "RUF"]
-ignore = ["D100", "D104", "PLR0913", "PLR2004", "S101", "PLR0915"]
+ignore = ["D100", "D104", "PLR2004", "S101"]
 
 [tool.ruff.per-file-ignores]
 "*/tests/*" = ["D"]
 "tools/xtce*" = ["D"]
+# TODO: Too many statements, this could be refactored and removed
+# by creating a loop over a predefined mapping
+"imap_processing/idex/idex_packet_parser.py" = ["PLR0915"]
 
 [tool.ruff.pydocstyle]
 convention = "numpy"
