--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,7 +23,7 @@ repos:
     rev: 'v0.0.292'
     hooks:
     - id: ruff
-      args: [--fix, --ignore, PLR0913]
+      args: [--fix]
   - repo: https://github.com/python-poetry/poetry
     rev: '1.6.0'  # add version here
     hooks:
