--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,7 +67,7 @@ addopts = "-ra"
 [tool.ruff]
 target-version = "py39"
 select = ["B", "D", "E", "F", "I", "N", "S", "W", "PL", "PT", "UP", "RUF"]
-ignore = ["D100", "D104", "PLR2004", "S101"]
+ignore = ["D100", "D104", "PLR2004", "S101", "PLR0913"]
 
 [tool.ruff.per-file-ignores]
 "*/tests/*" = ["D"]
