SWE L1B implementation and updates to L1A (#253)
SWE L1B implementation and updates to L1A:
- Added project wide utils function and swe specific utils
- added logics to populate data based on ESA lookup table number
- refactored code to store l1a data as 180x7 instead of 15x12x7 array.
- added new event test data and moved tests data into folders.
- updated l1a code to be ISTP compliant and to be able to create cdf file
- added new test and update test as needed
- implemented SWE l1b algorithm for both science and other data types
- creates cdf file for SWE l1b data product
- added deadtime correction and place holder for in-flight calibration. converted counts to rates
- added rest of l1b algorithm to convert raw data to engineering unit.
- updated function that write data to cdf to be more generic
- changed cdf attrs to use new CDF dataclasses
- change energy unit to be unitless for now.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,6 +76,7 @@ ignore = ["D100", "D104", "PLR2004", "S101"]
 # TODO: Too many statements, this could be refactored and removed
 # by creating a loop over a predefined mapping
 "imap_processing/idex/idex_packet_parser.py" = ["PLR0915"]
+"imap_processing/write_to_cdf.py" = ["PLR0913"]
 
 [tool.ruff.pydocstyle]
 convention = "numpy"
