--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: '3.11'
 
     - name: Install dependencies
       run: |
@@ -24,9 +24,9 @@ jobs:
 
     - name: Build documentation
       run: |
-        # SPHINXOPTS="-W --keep-going -n" is used to turn warnings into errors
+        # SPHINXOPTS="-W --keep-going" is used to turn warnings into errors
         # but keep going, so we don't fail on the first one.
-        make -C docs html SPHINXOPTS="-W --keep-going -n"
+        make -C docs html SPHINXOPTS="-W --keep-going"
 
     - uses: actions/upload-artifact@v2
       with:
