--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,5 +82,8 @@ ignore = ["D104", "PLR2004", "S101"]
 [tool.ruff.pydocstyle]
 convention = "numpy"
 
-[project.scripts]
-imap_processing = "imap_processing.run_processing"
+#[project.scripts]
+#imap_processing = "imap_processing.run_processing"
+
+[tool.poetry.scripts]
+imap-processing = 'imap_processing.run_processing:main'
