--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,7 +72,8 @@ select = ["B", "D", "E", "F", "I", "N", "S", "W", "PL", "PT", "UP", "RUF"]
 ignore = ["D104", "PLR2004", "S101"]
 
 [tool.ruff.per-file-ignores]
-"*/tests/*" = ["D"]
+# S603 unchecked input in subprocess call is fine in our tests
+"*/tests/*" = ["D", "S603"]
 "tools/xtce*" = ["D"]
 # TODO: Too many statements, this could be refactored and removed
 # by creating a loop over a predefined mapping
