--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,4 +83,4 @@ ignore = ["D104", "PLR2004", "S101"]
 convention = "numpy"
 
 [tool.poetry.scripts]
-imap-processing = 'imap_processing.run_processing:main'
+imap-processing = 'imap_processing.cli:main'
