MNT: Switch from black to ruff
This is one less dependency, and ruff is faster and produces
the same diff currently.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,15 +15,12 @@ repos:
     - id: trailing-whitespace
     - id: no-commit-to-branch
       args: [--branch, main, --branch, dev]
-  - repo: https://github.com/psf/black
-    rev: 23.12.1
-    hooks:
-    - id: black
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: 'v0.1.9'
+    rev: 'v0.1.11'
     hooks:
     - id: ruff
       args: [--fix]
+    - id: ruff-format
   - repo: https://github.com/python-poetry/poetry
     rev: '1.7.0'  # add version here
     hooks:
