--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,12 +36,11 @@ bitstring = ">=4.0.1,<5"
 cdflib = "^1.2.3"
 
 # Optional dependencies
-black = {version="^23.1.0", optional=true}
 pre-commit = {version="^3.3.3,<4", optional=true}
 pydata-sphinx-theme = {version="*", optional=true}
 pytest = {version=">=6.2.5,<7", optional=true}
 pytest-cov = {version="^4.0.0", optional=true}
-ruff = {version="^0.0.253", optional=true}
+ruff = {version=">=0.1.7", optional=true}
 sphinx = {version="*", optional=true}
 myst-parser = {version="^2.0.0", optional=true}
 numpydoc = {version="^1.5.0", optional=true}
@@ -50,7 +49,7 @@ openpyxl = {version=">=3.0.7,<4", optional=true}
 
 
 [tool.poetry.extras]
-dev = ["black", "pre-commit", "ruff"]
+dev = ["pre-commit", "ruff"]
 doc = ["myst-parser", "numpydoc", "pydata-sphinx-theme", "sphinx"]
 test = ["pytest", "pytest-cov"]
 tools= ["pandas", "openpyxl"]
