--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,15 +69,15 @@ addopts = "-ra"
 [tool.ruff]
 target-version = "py39"
 select = ["B", "D", "E", "F", "I", "N", "S", "W", "PL", "PT", "UP", "RUF"]
-ignore = ["D104", "PLR2004", "S101"]
+# D104: Missing docstring in public package
+# PLR2004: Magic value in comparison
+# RUF200: pyproject missing field (poetry doesn't follow the spec)
+ignore = ["D104", "PLR2004", "RUF200"]
 
 [tool.ruff.per-file-ignores]
 # S603 unchecked input in subprocess call is fine in our tests
-"*/tests/*" = ["D", "S603"]
+"*/tests/*" = ["D", "S101", "S603"]
 "tools/xtce*" = ["D"]
-# TODO: Too many statements, this could be refactored and removed
-# by creating a loop over a predefined mapping
-"imap_processing/idex/idex_packet_parser.py" = ["PLR0915"]
 
 [tool.ruff.pydocstyle]
 convention = "numpy"
