--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "poetry.core.masonry.api"
 name = "imap-processing"
 version = "0.1.0"
 description = "IMAP Science Operations Center Processing"
-authors = ["IMAP SDC Developers <imap.sdc@lists.lasp.colorado.edu>"]
+authors = ["IMAP SDC Developers <imap-sdc@lists.lasp.colorado.edu>"]
 readme = "README.md"
 license = "MIT"
 keywords = ["IMAP", "SDC", "SOC", "Science Operations"]
@@ -29,29 +29,27 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
+bitstring = ">=4.0.1"
+cdflib = ">=1.2.3"
 python = ">=3.9,<4"
-xarray = '>=2023.0.0'
 space_packet_parser = ">=4.1.0"
 spiceypy = ">=6.0.0"
-bitstring = ">=4.0.1"
-cdflib = "^1.2.3"
+xarray = '>=2023.0.0'
 
 # Optional dependencies
+numpydoc = {version="^1.5.0", optional=true}
+openpyxl = {version=">=3.0.7", optional=true}
+pandas = {version=">=2.0.0", optional=true}
 pre-commit = {version="^3.3.3", optional=true}
 pydata-sphinx-theme = {version="*", optional=true}
 pytest = {version=">=6.2.5", optional=true}
 pytest-cov = {version="^4.0.0", optional=true}
 ruff = {version=">=0.1.7", optional=true}
 sphinx = {version="*", optional=true}
-myst-parser = {version="^2.0.0", optional=true}
-numpydoc = {version="^1.5.0", optional=true}
-pandas = {version=">=2.0.0", optional=true}
-openpyxl = {version=">=3.0.7", optional=true}
-
 
 [tool.poetry.extras]
 dev = ["pre-commit", "ruff"]
-doc = ["myst-parser", "numpydoc", "pydata-sphinx-theme", "sphinx"]
+doc = ["numpydoc", "pydata-sphinx-theme", "sphinx"]
 test = ["pytest", "pytest-cov"]
 tools= ["pandas", "openpyxl"]
 
@@ -61,7 +59,7 @@ repository = "https://github.com/IMAP-Science-Operations-Center/imap_processing"
 
 [tool.pytest.ini_options]
 testpaths = [
-  "imap_processing",
+  "imap_processing/tests",
 ]
 addopts = "-ra"
 
