--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ myst-parser = {version="^2.0.0", optional=true}
 numpydoc = {version="^1.5.0", optional=true}
 pandas = {version=">=2.0.0", optional=true}
 openpyxl = {version=">=3.0.7", optional=true}
+sphinxcontrib-openapi = "^0.8.3"
 
 
 [tool.poetry.extras]
