--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ classifiers = [
 [tool.poetry.dependencies]
 bitstring = ">=4.0.1"
 cdflib = ">=1.2.3"
+imap-data-access = ">=0.2.0"
 python = ">=3.9,<4"
 space_packet_parser = ">=4.1.0"
 spiceypy = ">=6.0.0"
