--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,18 +68,18 @@ addopts = "-ra"
 
 [tool.ruff]
 target-version = "py39"
-select = ["B", "D", "E", "F", "I", "N", "S", "W", "PL", "PT", "UP", "RUF"]
+lint.select = ["B", "D", "E", "F", "I", "N", "S", "W", "PL", "PT", "UP", "RUF"]
 # D104: Missing docstring in public package
 # PLR2004: Magic value in comparison
 # RUF200: pyproject missing field (poetry doesn't follow the spec)
-ignore = ["D104", "PLR2004", "RUF200"]
+lint.ignore = ["D104", "PLR2004", "RUF200"]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 # S603 unchecked input in subprocess call is fine in our tests
 "*/tests/*" = ["D", "S101", "S603"]
 "tools/xtce*" = ["D"]
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 convention = "numpy"
 
 [tool.poetry.scripts]
