--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 bitstring = ">=4.0.1"
-cdflib = "==1.2.3"
+cdflib = ">=1.2.3"
 imap-data-access = ">=0.4.0"
 python = ">=3.9,<4"
 space_packet_parser = ">=4.1.0"
