MNT: Add all doc generated content to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 data/imap/
 
 # Documentation ignore
-docs/source/code-documentation/generated
+docs/source/**/generated
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
