--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -136,7 +136,7 @@
       "login": "subagonsouth",
       "name": "Tim Plummer",
       "avatar_url": "https://avatars.githubusercontent.com/u/16110870?v=4",
-      "profile": "http://www.subagonsouth.com",
+      "profile": "https://github.com/subagonsouth",
       "contributions": [
         "review"
       ]
