--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,7 +76,8 @@ lint.ignore = ["D104", "PLR2004", "RUF200", "S311"]
 
 [tool.ruff.lint.per-file-ignores]
 # S603 unchecked input in subprocess call is fine in our tests
-"*/tests/*" = ["D", "S101", "S603"]
+# PT006 Wrong type passed to first argument of @pytest.mark.parametrize
+"*/tests/*" = ["D", "S101", "S603", "PT006"]
 "tools/xtce*" = ["D"]
 
 [tool.ruff.lint.pydocstyle]
