--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -129,7 +129,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/39746325?v=4",
       "profile": "https://github.com/vmartinez-cu",
       "contributions": [
-        "review"
+        "review",
+        "code"
       ]
     },
     {
