--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,5 +37,7 @@ jobs:
           # Ignore the network marks from the remote test environment
           poetry run pytest --color=yes --cov --cov-report=xml
 
-      - name: Upload code coverage
-        uses: codecov/codecov-action@v3
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
