Add section for codespell to ignore specific words and add 'livetime' to the list

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,3 +84,6 @@ convention = "numpy"
 
 [tool.poetry.scripts]
 imap_cli = 'imap_processing.cli:main'
+
+[tool.codespell]
+ignore-words-list = "livetime"
