--- a/imap_processing/cdf/config/imap_mag_global_cdf_attrs.yaml
+++ b/imap_processing/cdf/config/imap_mag_global_cdf_attrs.yaml
@@ -1,6 +1,6 @@
 Descriptor: MAG>Magnetometer
 TEXT: >
-  The IMAP magnetometer (MAG) consists of a pair of identical magnetometers
+  The IMAP magnetometer (MAG consists of a pair of identical magnetometers
   which each measure the magnetic field in three directions in the vicinity of
   the spacecraft.
   MAG will contribute to our understanding of the acceleration and transport
@@ -8,8 +8,39 @@ TEXT: >
   MAG design and assembly is led by Imperial College, London. See
   https://imap.princeton.edu/instruments/mag for more details.
 
+imap_mag_l1a_norm-raw:
+    Data_type: L1A_raw-norm>Level-1A raw normal rate
+    Logical_source: imap_mag_l1a_norm-raw
+    Logical_source_description: IMAP Mission MAG Normal Rate Instrument Level-1A Data.
+
 imap_mag_l1a_burst-raw:
-  Data_type: L1A_raw-burst>Level-1A raw burst rate
-  Logical_source: imap_mag_l1a_burst-raw
-  Logical_source_description: IMAP Mission MAG Burst Rate Instrument Level-1A Data.
+    Data_type: L1A_raw-burst>Level-1A raw burst rate
+    Logical_source: imap_mag_l1a_burst-raw
+    Logical_source_description: IMAP Mission MAG Burst Rate Instrument Level-1A Data.
+
+
+imap_mag_l1a_norm-mago:
+    Data_type: L1A_raw-norm-mago>Level 1A MAGo normal rate
+    Logical_source: imap_mag_l1a_norm-mago
+    Logical_source_description: IMAP Mission MAGo Normal Rate Instrument Level-1A Data.
+
+
+imap_mag_l1a_norm-magi:
+    Data_type: L1A_raw-norm-magi>Level 1A MAGi normal rate
+    Logical_source: imap_mag_l1a_norm-magi
+    Logical_source_description: IMAP Mission MAGi Normal Rate Instrument Level-1A Data.
+
+
+imap_mag_l1a_burst-mago:
+    Data_type: L1A_raw-burst-mago>Level 1A MAGo burst rate
+    Logical_source: imap_mag_l1a_burst-mago
+    Logical_source_description: IMAP Mission MAGo Burst Rate Instrument Level-1A Data.
+
+
+imap_mag_l1a_burst-magi:
+    Data_type: L1A_raw-burst-magi>Level 1A MAGi burst rate
+    Logical_source: imap_mag_l1a_burst-magi
+    Logical_source_description: IMAP Mission MAGi Burst Rate Instrument Level-1A Data.
+
+
 
