DOC/CI: Add instructions for installing plugins

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,8 @@ jobs:
 
       - name: Install dependencies and app
         run: |
+          # Need to install extra plugins first
+          poetry self add "poetry-dynamic-versioning[plugin]"
           poetry install --extras "test"
 
       - name: Testing
