--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ python = ">=3.9,<4"
 space_packet_parser = ">=4.2.0"
 spiceypy = ">=6.0.0"
 xarray = '>=2023.0.0'
+pyyaml = "^6.0.1"
 
 # Optional dependencies
 numpydoc = {version="^1.5.0", optional=true}
