ENH/tools: Add metadata helper script to convert excel to yaml
This adds the ability to go from an Excel metadata definition spreadsheet
to yaml that the processing code can easily read in without relying on
any Excel reading within the processing suite.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Possible data directory files
 data/imap/
+# Ignore Excel files
+*.xlsx
+*.xls
 
 # Documentation ignore
 docs/source/**/generated
