MNT/REL: Add dynamic project version resolution
* Output version and status information during CLI runs
* Add processing version information to CDF writing

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,11 @@ jobs:
 
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        with:
+          # We need the full history to generate the proper version number
+          fetch-depth: 0
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
@@ -29,6 +33,8 @@ jobs:
 
       - name: Install dependencies and app
         run: |
+          # Need to install extra plugins first
+          poetry self add "poetry-dynamic-versioning[plugin]"
           poetry install --extras "test"
 
       - name: Testing
